Update old link. Fix grammar error.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Wordpress Theme Boilerplate
+Theme Name: WordPress Theme Boilerplate
 Author: Andrew Tolochka
-Author URI: https://github.com/anrw/wp-scratch-theme
+Author URI: https://github.com/anrw/classy/
 Description: Your theme description
 Version: 0.0.1
 */
